<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">


    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/style"
        android:gravity="center"
        android:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="180dp"
                android:layout_centerInParent="true"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorEnabled="true"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_home_categories"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/bnazanin"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="right"
                android:textColor="@color/black"
                android:paddingHorizontal="10dp"
                android:text="@string/newest"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/recycler_home_new_clothes"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_height="235dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bnazanin"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="right"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/black"
                android:paddingHorizontal="10dp"
                android:text="@string/special_sell"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/recycler_home_special_sell"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_height="235dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white_third"
                android:layout_marginTop="30dp"
                android:layout_height="200dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/mizbane_sedaye_shoma"
                android:fontFamily="@font/bnazanin"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center|right"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/number_call"
                    android:fontFamily="@font/bnazanin"
                    android:textSize="18dp"
                    android:gravity="right"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="#222121"
                    android:layout_height="wrap_content"/>


                <ImageView
                    android:layout_width="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/telephonecall"
                    android:layout_height="20dp"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center|right"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/number_call"
                    android:fontFamily="@font/bnazanin"
                    android:textSize="18dp"
                    android:gravity="right"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="#222121"
                    android:layout_height="wrap_content"/>


                <ImageView
                    android:layout_width="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/whatsapp"
                    android:layout_height="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center|right"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/email_call"
                    android:fontFamily="@font/bnazanin"
                    android:textSize="15dp"
                    android:gravity="right"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="#222121"
                    android:layout_height="wrap_content"/>


                <ImageView
                    android:layout_width="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/gmail"
                    android:layout_height="20dp"/>

            </LinearLayout>


        </LinearLayout>


            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:layout_height="100dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight=".25"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/refund"
                        android:layout_height="50dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="15dp"
                        android:text="@string/zemanat"
                        android:textColor="@color/black"
                        android:layout_height="50dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight=".25"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/guarantee"
                        android:layout_height="50dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="15dp"
                        android:text="@string/esalat"
                        android:textColor="@color/black"
                        android:layout_height="50dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight=".25"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/support"
                        android:layout_height="50dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="15dp"
                        android:text="@string/poshtibani"
                        android:textColor="@color/black"
                        android:layout_height="50dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight=".25"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/fast"
                        android:layout_height="50dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="15dp"
                        android:text="@string/tahvil"
                        android:textColor="@color/black"
                        android:layout_height="50dp"/>
                </LinearLayout>






            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>